--- a/homework1_9 _30.html
+++ b/homework1_9 _30.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head> 
@@ -5,31 +6,29 @@
 <title></title> 
 </head>
 <body>
-	<center>
 <article>
 	<header>
-	<h1>这是网站的标题喔~没错就是我</h1>
+	<h1>网页标题</h1>
 	<u1>
 		<li>
-			<a href="https://www.hao123.com/index.html">去123网页导航吗？</a>
+			<a href="">首页</a>
 		</li>
-		<p>
 		<li>
-			<a href="https://www.bilibili.com/">快来我们快乐的源泉</a>
+			<a href="">帮助</a>
 		</li>
 	</u1>
 	
 	
 	<hgroup>
-						<h1>我是青青草原懒洋洋</h1>
-						<h2>——全都是我的</h2>
+						<h1>文章主标题</h1>
+						<h2>文章子标题</h2>
 						</hgroup>
 						</header>
-						<p>没有正文</p>
+						<p>文章正文</p>
 						<aside>
-							<h1>你要评论吗</h1>
+							<h1>评论标题</h1>
 							<d1>
-								<dt>快写下你的评论文</dt>
+								<dt>评论正文</dt>
 								</d1>
 						</aside>
 					
@@ -37,13 +36,13 @@
 	<footer>
 		<p>
 			<snall>
-				版权所有：没得
+				版权所有：陆凌牛
 			</snall>
 		</p>
 	</footer>
 	
 </article>
-</center>
+
 </body>
 </html>
 
